Better style